update page lang

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 	<head>
 		<title>Дивись фільми, серіали, аніме та читай мангу в одному додатку Strumok на телефоні та Anroid TV!</title>
 		<meta name="description" content="Завантажте Strumok – універсальний додаток для перегляду фільмів, серіалів, аніме та читання манги на вашому телефоні та Android TV! Насолоджуйтесь улюбленим контентом в одному місці." />
