--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="Завантажте Strumok – універсальний додаток для перегляду фільмів, серіалів, аніме та читання манги на вашому телефоні та Android TV! Насолоджуйтесь улюбленим контентом в одному місці." />
 		<meta name="keywords" content="фільми, серіали, аніме, манга, Strumok, додаток для перегляду, Android, TV, мобільний додаток, розваги" />
 		<meta charset="utf-8" />
+		<meta name="robots" content="nofollow"/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
